fix: size of editing area is too small

--- a/web-src/src/index.css
+++ b/web-src/src/index.css
@@ -46,6 +46,7 @@ body {
 
 .editor {
   font-family: monospace;
+  min-height: 100%;
 }
 
 .editor textarea:focus  {
